Setup - altering Mysql IP 1_mysql.md adding ticks at the end 2_cm.md updating all the db stuffs